// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerticalPersona renders correctly with a text and secondary text 1`] = `
<div
  className=
      test-cn-root
      {
        align-items: center;
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        padding-bottom: 0;
        padding-left: 8px;
        padding-right: 8px;
        padding-top: 0;
        width: 122px;
      }
>
  <div
    className=

        {
          align-items: center;
          background-color: #5E4B8B;
          border-radius: 50%;
          color: white;
          display: flex;
          height: 48px;
          justify-content: center;
          position: relative;
          width: 48px;
        }
  >
    <span
      className=

          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: inherit;
            display: inline;
            font-family: inherit;
            font-size: 19.2px;
            font-weight: inherit;
          }
    >
      JB
    </span>
  </div>
  <span
    className=
        test-cn-text
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #333333;
          display: inline;
          font-family: inherit;
          font-size: 14px;
          font-weight: 600;
          padding-top: 8px;
          text-align: center;
          white-space: initial;
          width: 100%;
          word-break: break-word;
          word-wrap: break-word;
        }
  >
    James Bond
  </span>
  <span
    className=
        test-cn-secondaryText
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #666666;
          display: inline;
          font-family: inherit;
          font-size: 12px;
          font-weight: inherit;
          line-height: 1.42;
          padding-top: 6px;
          text-align: center;
          white-space: initial;
          width: 100%;
          word-break: break-word;
          word-wrap: break-word;
        }
  >
    Super secret agent
  </span>
</div>
`;

exports[`VerticalPersona renders correctly with only a text 1`] = `
<div
  className=
      test-cn-root
      {
        align-items: center;
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        padding-bottom: 0;
        padding-left: 8px;
        padding-right: 8px;
        padding-top: 0;
        width: 122px;
      }
>
  <div
    className=

        {
          align-items: center;
          background-color: #5E4B8B;
          border-radius: 50%;
          color: white;
          display: flex;
          height: 48px;
          justify-content: center;
          position: relative;
          width: 48px;
        }
  >
    <span
      className=

          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: inherit;
            display: inline;
            font-family: inherit;
            font-size: 19.2px;
            font-weight: inherit;
          }
    >
      JB
    </span>
  </div>
  <span
    className=
        test-cn-text
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #333333;
          display: inline;
          font-family: inherit;
          font-size: 14px;
          font-weight: 600;
          padding-top: 8px;
          text-align: center;
          white-space: initial;
          width: 100%;
          word-break: break-word;
          word-wrap: break-word;
        }
  >
    James Bond
  </span>
</div>
`;

exports[`VerticalPersona renders the coin with the passed coinProps 1`] = `
<div
  className=
      test-cn-root
      {
        align-items: center;
        box-sizing: border-box;
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        padding-bottom: 0;
        padding-left: 8px;
        padding-right: 8px;
        padding-top: 0;
        width: 122px;
      }
>
  <div
    className=

        {
          align-items: center;
          background-color: red;
          border-radius: 50%;
          color: white;
          display: flex;
          height: 48px;
          justify-content: center;
          position: relative;
          width: 48px;
        }
  >
    <span
      className=

          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: inherit;
            display: inline;
            font-family: inherit;
            font-size: 19.2px;
            font-weight: inherit;
          }
    >
      MI6
    </span>
  </div>
  <span
    className=
        test-cn-text
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #333333;
          display: inline;
          font-family: inherit;
          font-size: 14px;
          font-weight: 600;
          padding-top: 8px;
          text-align: center;
          white-space: initial;
          width: 100%;
          word-break: break-word;
          word-wrap: break-word;
        }
  >
    James Bond
  </span>
  <span
    className=
        test-cn-secondaryText
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #666666;
          display: inline;
          font-family: inherit;
          font-size: 12px;
          font-weight: inherit;
          line-height: 1.42;
          padding-top: 6px;
          text-align: center;
          white-space: initial;
          width: 100%;
          word-break: break-word;
          word-wrap: break-word;
        }
  >
    Super secret agent
  </span>
</div>
`;
